# proto_sample

./: .bazelignore  .gitignore  BUILD.bazel  DEVELOPMENT.md  Dockerfile  LICENSE  README.md  TESTING.md  WORKSPACE  buf.gen.yaml  deps.bzl  go.mod  go.sum
cmd/sample/: BUILD.bazel  main.go
cmd/sample/ctl/: BUILD.bazel  admin.go  book.go  book_create.go  book_get.go  client.go  config.go  config_get.go  root.go  utils.go  version.go
db/: README.md
db/migrations/postgresql/: 000001_phone_numbers.up.sql  000002_persons.down.sql  000002_persons.up.sql  000003_person_phone_numbers.down.sql  000003_person_phone_numbers.up.sql  000004_books.up.sql  000005_book_authors.up.sql
db/migrations/sqlite/: 000001_phone_numbers.down.sql  000001_phone_numbers.up.sql  000002_persons.up.sql  000003_person_phone_numbers.up.sql  000004_books.down.sql  000004_books.up.sql  000005_book_authors.down.sql  000005_book_authors.up.sql
kubernetes-manifests/postgres/: deployment.yaml  persistent_volume.yaml  secret.yaml  service.yaml
kubernetes-manifests/postgres-migrate/: deployment.yaml  persistent-volume.yaml
kubernetes-manifests/postgres-migrate-job/: migration-job.yaml  persistent-volume.yaml
kubernetes-manifests/proto-sample-server/: TLS_SETUP.md  deployment.yaml  nginx-ingress.yaml  service.yaml
proto/: buf.yaml
proto/sample/v1alpha/: book.proto  config.proto  person.proto  sample_service.proto
proto/sample/v1alpha/gorm/: book.proto  person.proto
server/: BUILD.bazel  main.go  utils.go
